--- a/composer.json
+++ b/composer.json
@@ -10,8 +10,8 @@
     "require": {
         "php": "^7.1.3",
         "fideloper/proxy": "^4.0",
-        "laravel/framework": "5.8.*",
-        "laravel/passport": "^7.5",
+        "laravel/framework": "^6.0",
+        "laravel/passport": "^9.3.2",
         "laravel/tinker": "^1.0",
         "lcobucci/jwt": "3.3.3"
     },
