--- a/.env.example
+++ b/.env.example
@@ -1,17 +1,17 @@
-APP_NAME=Laravel
+APP_NAME='TimeClock'
 APP_ENV=local
-APP_KEY=
+APP_KEY=base64:9l3FV4r0yD6fAyQGkuoVPbbVHOAcJ7jjVApwFMPIn0c=
 APP_DEBUG=true
-APP_URL=http://localhost
+APP_URL=http://localhost:8000
 
 LOG_CHANNEL=stack
 
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=u316059310_timeclock
+DB_USERNAME=u316059310_ocean
+DB_PASSWORD=Ocean@mj1990
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
@@ -24,11 +24,12 @@ REDIS_PASSWORD=null
 REDIS_PORT=6379
 
 MAIL_DRIVER=smtp
-MAIL_HOST=smtp.mailtrap.io
-MAIL_PORT=2525
-MAIL_USERNAME=null
-MAIL_PASSWORD=null
-MAIL_ENCRYPTION=null
+MAIL_HOST=smtp.googlemail.com
+MAIL_PORT=587
+MAIL_USERNAME=milin.oceantechs@gmail.com
+#MAIL_PASSWORD=Ocean@mj
+MAIL_PASSWORD=rqypaxofbmqwmwvt
+MAIL_ENCRYPTION=tls
 
 AWS_ACCESS_KEY_ID=
 AWS_SECRET_ACCESS_KEY=
@@ -42,3 +43,5 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+APP_TIMEZONE='Asia/Kolkata'
