--- a/.env.production.example
+++ b/.env.production.example
@@ -9,9 +9,9 @@ LOG_CHANNEL=stack
 DB_CONNECTION=mysql
 DB_HOST=127.0.0.1
 DB_PORT=3306
-DB_DATABASE=laravel
-DB_USERNAME=root
-DB_PASSWORD=
+DB_DATABASE=u316059310_laravel
+DB_USERNAME=u316059310_laravel
+DB_PASSWORD=Laravel@mj2021
 
 BROADCAST_DRIVER=log
 CACHE_DRIVER=file
