--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
     "license": "MIT",
     "require": {
         "php": "^8.0.2",
+        "fideloper/proxy": "^4.0",
         "laravel/framework": "^9.0",
         "laravel/passport": "^10.0",
         "laravel/tinker": "^2.0",
