Update all of the logic and remove unnecessary files

--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,9 @@
 /public/female
 /public/male
 /public/focus_areas
+/public/workouts
+/public/exercises
+/public/equipment
 /storage/*.key
 /vendor
 .env
